@@ -35,7 +35,19 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
         super(name);
     }
     
+    public static boolean isJDK14(){
+        try {
+            SourceVersion.valueOf("RELEASE_14"); //NOI18N
+        } catch (IllegalArgumentException ex) {
+            //OK, no RELEASE_14, skip test
+            return false;
+        }
+        return true;
+    }
+
     public void testSwitch2RuleSwitch() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -49,7 +61,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -68,6 +79,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
     
     public void testLastNotBreak() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -79,7 +92,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -96,6 +108,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
     
     public void testMultipleCases() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -109,7 +123,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -127,6 +140,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
     
     public void testFallThrough() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -139,12 +154,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
     
     public void testMissingLastBreak() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -158,7 +174,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -176,6 +191,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testDefault() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -188,7 +205,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -208,6 +224,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testVariables1() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -227,7 +245,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -253,6 +270,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testFallThroughDefault1() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -266,12 +285,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
 
     public void testFallThroughDefault2() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -285,12 +305,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
 
     public void testTrailingEmptyCase() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -306,7 +327,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -327,6 +347,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testNeedsPreview() throws Exception {
+        if(ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -346,6 +368,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testBreakInside1() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -358,12 +382,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
 
     public void testBreakInside2() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;\n" +
                        "public class Test {\n" +
@@ -378,7 +403,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("4:9-4:15:verifier:Convert switch to rule switch")
                 .applyFix()
@@ -400,6 +424,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testContinueInside1() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;\n" +
                        "public class Test {\n" +
@@ -412,12 +438,13 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .assertWarnings();
     }
 
     public void testContinueInside2() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;\n" +
                        "public class Test {\n" +
@@ -434,7 +461,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("5:13-5:19:verifier:Convert switch to rule switch")
                 .applyFix()
@@ -460,6 +486,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     //Test cases for switch expression
 
     public void testSwitch2SwitchExpression() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -474,7 +502,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -494,6 +521,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionMultiCase() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -508,7 +537,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "    }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:8-3:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -527,6 +555,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionMultiCase2() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -541,7 +571,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "    }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:8-3:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -560,6 +589,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionOnlyDefault() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -571,7 +602,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "    }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:8-3:14:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -588,6 +618,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionNestedInnerSwitchExpression() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -605,7 +637,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("4:9-4:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -628,6 +659,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionReturnValue() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -639,7 +672,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("2:9-2:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -656,6 +688,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionTypeCast() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -668,7 +702,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -686,6 +719,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionTypeCastReturn() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -697,7 +732,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("2:9-2:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -714,6 +748,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionNestedSwitchExpression() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -729,7 +765,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("3:9-3:15:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
@@ -750,6 +785,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionNestedOuterSwitchStatement() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -770,7 +807,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("4:9-4:15:verifier:" + Bundle.ERR_ConvertSwitchToRuleSwitch())
                 .applyFix()
@@ -794,6 +830,8 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
     }
 
     public void testSwitch2SwitchExpressionNestedInnerSwitchStatement() throws Exception {
+        if(!ConvertSwitchToRuleSwitchTest.isJDK14())
+            return;
         HintTest.create()
                 .input("package test;" +
                        "public class Test {\n" +
@@ -814,7 +852,6 @@ public class ConvertSwitchToRuleSwitchTest extends NbTestCase {
                        "     }\n" +
                        "}\n")
                 .sourceLevel(SourceVersion.latest().name())
-                .options("--enable-preview")
                 .run(ConvertSwitchToRuleSwitch.class)
                 .findWarning("6:16-6:22:verifier:" + Bundle.ERR_ConvertSwitchToSwitchExpression())
                 .applyFix()
