@@ -20,6 +20,7 @@ package org.netbeans.modules.java.hints.jdk;
 
 import org.netbeans.junit.NbTestCase;
 import org.netbeans.modules.java.hints.test.api.HintTest;
+import javax.lang.model.SourceVersion;
 
 /**
  *
@@ -43,6 +44,8 @@ public class ConvertToPatternInstanceOfTest extends NbTestCase {
                        "        return -1;\n" +
                        "    }\n" +
                        "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
                 .run(ConvertToPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToPatternInstanceOf())
                 .applyFix()
@@ -71,6 +74,8 @@ public class ConvertToPatternInstanceOfTest extends NbTestCase {
                        "        }\n" +
                        "    }\n" +
                        "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
                 .run(ConvertToPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToPatternInstanceOf())
                 .applyFix()
@@ -98,6 +103,8 @@ public class ConvertToPatternInstanceOfTest extends NbTestCase {
                        "        return -1;\n" +
                        "    }\n" +
                        "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
                 .run(ConvertToPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToPatternInstanceOf())
                 .applyFix()
@@ -124,6 +131,8 @@ public class ConvertToPatternInstanceOfTest extends NbTestCase {
                        "        return -1;\n" +
                        "    }\n" +
                        "}\n")
+                .sourceLevel(SourceVersion.latest().name())
+                .options("--enable-preview")
                 .run(ConvertToPatternInstanceOf.class)
                 .findWarning("3:8-3:10:verifier:" + Bundle.ERR_ConvertToPatternInstanceOf())
                 .applyFix()
